src/Grammar/FlutterParser.java
// Generated from C:/Users/sayas/AI Project/compiler2/src/Grammar\FlutterParser.g4 by ANTLR 4.12.0
package Grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FlutterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SETSTATE=1, GET=2, TO=3, BACK=4, OFALL=5, EXTENDS=6, STATELESSWIDGET=7, 
		OVERRIDE=8, STATE=9, CREATESTATE=10, WIDGET=11, BUILD=12, BUILDCONTEXT=13, 
		CONTEXT=14, COLUMN=15, E_BUTTON=16, ROW=17, CONTAINER=18, CHILDREN=19, 
		IMAGEASSETS=20, IMAGE=21, CHILD=22, TEXT=23, SCAFFOLD=24, BODY=25, COLOR=26, 
		COLORS=27, HEIGHT=28, WIDTH=29, ON_PRESSED=30, CENTER=31, BACK_COLOR=32, 
		MAINAXISALIGNMENT_KEY=33, MAINAXISALIGNMENT_VALUE=34, CROSSAXISALIGNMENT_KEY=35, 
		CROSSAXISALIGNMENT_VALUE=36, MAINAXISSIZE_KEY=37, MAINAXISSIZE_VALUE=38, 
		MAINAXISALIGNMENT_VALUES=39, MAINAXISSIZE_VALUES=40, COLORS_VALUES=41, 
		FONTSIZE=42, STYLE=43, TEXTSTYLE=44, ARGUMENTS=45, GETARG=46, VAR=47, 
		INT=48, STRING=49, VOID=50, DOUBLE=51, BOOL=52, MAP=53, LIST=54, WHILE=55, 
		FOR=56, TRUE=57, FALSE=58, RETURN=59, BREAK=60, IMPORT=61, PRINT=62, LENGTH=63, 
		CLASS=64, ABSTRACT=65, TEXTFIELD=66, HINT_TEXT=67, TEXTFIELD_CONTROLLER=68, 
		FORM=69, IF=70, ELSE_IF=71, ELSE=72, WS=73, CB=74, OB=75, CURLYOPEN=76, 
		CURLYCLOSE=77, OPENTEXT=78, CLOSETEXT=79, C=80, SUM=81, DIVID=82, MULTIPLY=83, 
		MINUS=84, SUMS=85, MINUSS=86, OR=87, AND=88, SUM_EQUAL=89, MINUS_EQUAL=90, 
		EQUALEQUAL=91, DIVID_EQUAL=92, MULTIPLY_EQUAL=93, NOT_EQUAL=94, EQUAL=95, 
		TAG_OPEN=96, TAG_CLOSE=97, TAG_OPEN_EQUAL=98, TAG_CLOSE_EQUAL=99, COMMA=100, 
		SEMICOLON=101, DOT=102, SINGLE_QUOTE=103, DOUBLE_QUOTE=104, LINE_COMMENT=105, 
		MULTI_LINE_COMMENTS=106, NUMBER=107, CHARS=108, STRING_EXP=109, WS_Cross=110, 
		DOT_Cross=111, CROSSAXISALIGNMENT_VALUES=112;
	public static final int
		RULE_program = 0, RULE_importRules = 1, RULE_topLevel = 2, RULE_class_decl = 3, 
		RULE_class_member = 4, RULE_statelessWidget = 5, RULE_variables_decl = 6, 
		RULE_list = 7, RULE_list_exp = 8, RULE_map = 9, RULE_buildMethod = 10, 
		RULE_widgetElement = 11, RULE_function = 12, RULE_function_parameters = 13, 
		RULE_code_attribute = 14, RULE_call_function = 15, RULE_fast_math = 16, 
		RULE_operation_arithmatic = 17, RULE_while_statment = 18, RULE_if_statment = 19, 
		RULE_else_if_statements = 20, RULE_assignment = 21, RULE_print_statements = 22, 
		RULE_for_statement = 23, RULE_for_first_part = 24, RULE_block = 25, RULE_type = 26, 
		RULE_expr = 27, RULE_increase_math = 28, RULE_decrease_math = 29, RULE_map_expr = 30, 
		RULE_map_object = 31, RULE_operation_if = 32, RULE_widget = 33, RULE_get_to = 34, 
		RULE_get_to_args = 35, RULE_get_to_arg = 36, RULE_get_back = 37, RULE_scaffold = 38, 
		RULE_scaffoldArgs = 39, RULE_scaffoldProperty = 40, RULE_image = 41, RULE_imageProperties = 42, 
		RULE_imageProperty = 43, RULE_text = 44, RULE_textProperties = 45, RULE_textProperty = 46, 
		RULE_style = 47, RULE_textStyleProprties = 48, RULE_textStyleProprty = 49, 
		RULE_column = 50, RULE_row = 51, RULE_columnArgs = 52, RULE_columnArg = 53, 
		RULE_rowArgs = 54, RULE_rowArg = 55, RULE_mainAxisAlignment = 56, RULE_crossAxisAlignment = 57, 
		RULE_mainAxisSize = 58, RULE_widgetList = 59, RULE_container = 60, RULE_containerProperties = 61, 
		RULE_containerProperty = 62, RULE_e_button = 63, RULE_e_buttonProperties = 64, 
		RULE_e_ButtonProperty = 65, RULE_textField = 66, RULE_textFieldArgs = 67, 
		RULE_textFieldWidgetArg = 68, RULE_form = 69, RULE_formArgs = 70, RULE_formArg = 71, 
		RULE_voidFunction = 72, RULE_center = 73, RULE_centerWidgetArgs = 74, 
		RULE_setState = 75;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importRules", "topLevel", "class_decl", "class_member", "statelessWidget", 
			"variables_decl", "list", "list_exp", "map", "buildMethod", "widgetElement", 
			"function", "function_parameters", "code_attribute", "call_function", 
			"fast_math", "operation_arithmatic", "while_statment", "if_statment", 
			"else_if_statements", "assignment", "print_statements", "for_statement", 
			"for_first_part", "block", "type", "expr", "increase_math", "decrease_math", 
			"map_expr", "map_object", "operation_if", "widget", "get_to", "get_to_args", 
			"get_to_arg", "get_back", "scaffold", "scaffoldArgs", "scaffoldProperty", 
			"image", "imageProperties", "imageProperty", "text", "textProperties", 
			"textProperty", "style", "textStyleProprties", "textStyleProprty", "column", 
			"row", "columnArgs", "columnArg", "rowArgs", "rowArg", "mainAxisAlignment", 
			"crossAxisAlignment", "mainAxisSize", "widgetList", "container", "containerProperties", 
			"containerProperty", "e_button", "e_buttonProperties", "e_ButtonProperty", 
			"textField", "textFieldArgs", "textFieldWidgetArg", "form", "formArgs", 
			"formArg", "voidFunction", "center", "centerWidgetArgs", "setState"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'setState'", "'Get'", "'to'", "'back'", "'offAll'", "'extends'", 
			"'StatelessWidget'", "'@override'", "'state'", "'createState'", "'Widget'", 
			"'build'", "'BuildContext'", "'context'", "'Column'", "'ElevatedButton'", 
			"'Row'", "'Container'", "'children'", "'Image.assets'", "'Image'", "'child'", 
			"'Text'", "'Scaffold'", "'body'", "'color'", "'Colors'", "'height'", 
			"'width'", "'onPressed'", "'Center'", "'backgroundColor'", "'mainAxisAlignment'", 
			"'MainAxisAlignment'", "'crossAxisAlignment'", "'CrossAxisAlignment'", 
			"'mainAxisSize'", "'MainAxisSize'", null, null, null, "'fontSize'", "'style'", 
			"'TextStyle'", "'arguments'", "'Get.arguments'", "'var'", "'int'", "'String'", 
			"'void'", "'double'", "'bool'", "'Map'", "'List'", "'while'", "'for'", 
			"'true'", "'false'", "'return'", "'break'", "'import'", "'print'", "'length'", 
			"'class'", "'abstract'", "'TextField'", "'hintText'", "'controller'", 
			"'Form'", "'if'", "'else if'", "'else'", null, "']'", "'['", "'{'", "'}'", 
			"'('", "')'", "':'", "'+'", "'/'", "'*'", "'-'", "'++'", "'--'", "'||'", 
			"'&&'", "'+='", "'-='", "'=='", "'/='", "'*='", "'!='", "'='", "'<'", 
			"'>'", "'<='", "'>='", "','", "';'", null, "'''", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SETSTATE", "GET", "TO", "BACK", "OFALL", "EXTENDS", "STATELESSWIDGET", 
			"OVERRIDE", "STATE", "CREATESTATE", "WIDGET", "BUILD", "BUILDCONTEXT", 
			"CONTEXT", "COLUMN", "E_BUTTON", "ROW", "CONTAINER", "CHILDREN", "IMAGEASSETS", 
			"IMAGE", "CHILD", "TEXT", "SCAFFOLD", "BODY", "COLOR", "COLORS", "HEIGHT", 
			"WIDTH", "ON_PRESSED", "CENTER", "BACK_COLOR", "MAINAXISALIGNMENT_KEY", 
			"MAINAXISALIGNMENT_VALUE", "CROSSAXISALIGNMENT_KEY", "CROSSAXISALIGNMENT_VALUE", 
			"MAINAXISSIZE_KEY", "MAINAXISSIZE_VALUE", "MAINAXISALIGNMENT_VALUES", 
			"MAINAXISSIZE_VALUES", "COLORS_VALUES", "FONTSIZE", "STYLE", "TEXTSTYLE", 
			"ARGUMENTS", "GETARG", "VAR", "INT", "STRING", "VOID", "DOUBLE", "BOOL", 
			"MAP", "LIST", "WHILE", "FOR", "TRUE", "FALSE", "RETURN", "BREAK", "IMPORT", 
			"PRINT", "LENGTH", "CLASS", "ABSTRACT", "TEXTFIELD", "HINT_TEXT", "TEXTFIELD_CONTROLLER", 
			"FORM", "IF", "ELSE_IF", "ELSE", "WS", "CB", "OB", "CURLYOPEN", "CURLYCLOSE", 
			"OPENTEXT", "CLOSETEXT", "C", "SUM", "DIVID", "MULTIPLY", "MINUS", "SUMS", 
			"MINUSS", "OR", "AND", "SUM_EQUAL", "MINUS_EQUAL", "EQUALEQUAL", "DIVID_EQUAL", 
			"MULTIPLY_EQUAL", "NOT_EQUAL", "EQUAL", "TAG_OPEN", "TAG_CLOSE", "TAG_OPEN_EQUAL", 
			"TAG_CLOSE_EQUAL", "COMMA", "SEMICOLON", "DOT", "SINGLE_QUOTE", "DOUBLE_QUOTE", 
			"LINE_COMMENT", "MULTI_LINE_COMMENTS", "NUMBER", "CHARS", "STRING_EXP", 
			"WS_Cross", "DOT_Cross", "CROSSAXISALIGNMENT_VALUES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FlutterParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlutterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<ImportRulesContext> importRules() {
			return getRuleContexts(ImportRulesContext.class);
		}
		public ImportRulesContext importRules(int i) {
			return getRuleContext(ImportRulesContext.class,i);
		}
		public List<TopLevelContext> topLevel() {
			return getRuleContexts(TopLevelContext.class);
		}
		public TopLevelContext topLevel(int i) {
			return getRuleContext(TopLevelContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(152);
				importRules();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 15)) & ~0x3f) == 0 && ((1L << (_la - 15)) & 21956143400157999L) != 0)) {
				{
				{
				setState(158);
				topLevel();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportRulesContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(FlutterParser.IMPORT, 0); }
		public TerminalNode STRING_EXP() { return getToken(FlutterParser.STRING_EXP, 0); }
		public TerminalNode SEMICOLON() { return getToken(FlutterParser.SEMICOLON, 0); }
		public ImportRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterImportRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitImportRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitImportRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportRulesContext importRules() throws RecognitionException {
		ImportRulesContext _localctx = new ImportRulesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(IMPORT);
			setState(165);
			match(STRING_EXP);
			setState(166);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelContext extends ParserRuleContext {
		public TopLevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevel; }
	 
		public TopLevelContext() { }
		public void copyFrom(TopLevelContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationTopLevelContext extends TopLevelContext {
		public Class_declContext class_decl() {
			return getRuleContext(Class_declContext.class,0);
		}
		public ClassDeclarationTopLevelContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterClassDeclarationTopLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitClassDeclarationTopLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitClassDeclarationTopLevel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationTopLevelContext extends TopLevelContext {
		public Variables_declContext variables_decl() {
			return getRuleContext(Variables_declContext.class,0);
		}
		public VariableDeclarationTopLevelContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterVariableDeclarationTopLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitVariableDeclarationTopLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitVariableDeclarationTopLevel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WidgetDeclarationTopLevelContext extends TopLevelContext {
		public WidgetContext widget() {
			return getRuleContext(WidgetContext.class,0);
		}
		public WidgetDeclarationTopLevelContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterWidgetDeclarationTopLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitWidgetDeclarationTopLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitWidgetDeclarationTopLevel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StateLessDeclarationTopLevelContext extends TopLevelContext {
		public StatelessWidgetContext statelessWidget() {
			return getRuleContext(StatelessWidgetContext.class,0);
		}
		public StateLessDeclarationTopLevelContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterStateLessDeclarationTopLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitStateLessDeclarationTopLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitStateLessDeclarationTopLevel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationTopLevelContext extends TopLevelContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunctionDeclarationTopLevelContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).enterFunctionDeclarationTopLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlutterParserListener ) ((FlutterParserListener)listener).exitFunctionDeclarationTopLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlutterParserVisitor ) return ((FlutterParserVisitor<? extends T>)visitor).visitFunctionDeclarationTopLevel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelContext topLevel() throws RecognitionException {
		TopLevelContext _localctx = new TopLevelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topLevel);
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new VariableDeclarationTopLevelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				variables_decl();
				}
				break;
			case 2:
				_localctx = new ClassDeclarationTopLevelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				class_decl();
				}
				break;
			case 3:
				_localctx = new FunctionDeclarationTopLevelContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				function();
				}
				break;
			case 4:
				_localctx = new WidgetDeclarationTopLevelContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(171);
				widget();
				}
				break;
			case 5:
				_localctx = new StateLessDeclarationTopLevelContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(172);
				statelessWidget();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
